--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/SpringBootStarter_java.vm
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/SpringBootStarter_java.vm
@@ -8,7 +8,7 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 /**
  * Spring Boot entry point <br>
  * 
- * @author Telosys
+ * @author ${AUTHOR}
  *
  */
 @SpringBootApplication
