--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/XxxJpaEntity_java.vm
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/XxxJpaEntity_java.vm
@@ -7,11 +7,8 @@ import lombok.Setter;
 import java.io.Serial;
 import java.io.Serializable;
 
-
-import java.io.Serializable;
-
 /**
- * JPA entity class for "${entity.name}"
+ * JPA entity ${entity.name}
  *
  * @author ${AUTHOR}
  *
@@ -22,6 +19,7 @@ import java.io.Serializable;
 @Entity
 public class ${entity.name} implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     @Id
