--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/XxxService_java.vm
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/XxxService_java.vm
@@ -1,4 +1,4 @@
-package ${target.javaPackageFromFolder(${SRC})};
+package ${ROOT_PKG}.services;
 
 import java.util.Optional;
 import org.springframework.data.domain.Page;
