--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/XxxServiceImpl_java.vm
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/main-java/XxxServiceImpl_java.vm
@@ -1,4 +1,8 @@
+#parse("include/init_var_entity.vm")
+
 package ${ROOT_PKG}.services.impl;
+
+import java.util.Optional;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,21 +25,15 @@ import ${ROOT_PKG}.services.${entity.name}Service;
 @Slf4j
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
-@Service("$fn.uncapitalize(${entity.name})Service")
+@Service("${element}Service")
 public class ${entity.name}ServiceImpl implements ${entity.name}Service {
 
-	private final ${entity.name}Repository  ${fn.uncapitalize(${entity.name})}Repository;
+	private final ${entity.name}Repository  ${element}Repository;
 
 	@Override
-	public ${entity.name} get${entity.name}ById(Long id) {
+	public Optional<${entity.name}> get${entity.name}ById(Long id) {
 
-		log.info("Fetching ${entity.name} with id: {}", id);
-
-		return  ${fn.uncapitalize(${entity.name})}Repository.findById(id).map(entity -> {
-					log.info("Found ${entity.name}: {}", entity);
-					return entity;
-				})
-				.orElseThrow(() -> new RuntimeException("Entity not found with id: " + id));
+		return  ${element}Repository.findById(id);
 	}
 
 	@Override
