--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/build_gradle.vm
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/build_gradle.vm
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version ${SPRING_BOOT_VERSION}
     id 'io.spring.dependency-management' version '1.1.7'
-    id 'org.graalvm.buildtools.native' version '0.10.6'
+    // id 'org.graalvm.buildtools.native' version '0.10.6'
 }
 
 group = 'eu.opensource'
@@ -39,8 +39,9 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     // runtimeOnly 'com.mysql:mysql-connector-j'
 
-    runtimeOnly 'org.webjars:bootstrap:5.3.3'
-    runtimeOnly 'org.webjars:font-awesome:6.7.2'
+    runtimeOnly("org.webjars:bootstrap:${BOOTSTRAP_VERSION}")
+    runtimeOnly("org.webjars:font-awesome:${FONT_AWESOME_VERSION}")
+    // runtimeOnly("org.webjars:popper.js:${POPPER_VERSION}")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // testImplementation 'org.springframework.security:spring-security-test'
